--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
@@ -21,6 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch db.json --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,5 +51,6 @@
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
